# duo-sync

./: README.md  Secrets.xcconfig  duo-sync-WidgetExtension.entitlements
Config/: Secrets.example.xcconfig  Secrets.xcconfig
Shared/: NowPlayingActivityAttributes.swift  NowPlayingSnapshot.swift  SharedStore.swift
backend/: .env.example  PHASE_2_REALTIME.md  README.md  pyproject.toml
backend/app/: apns.py  config.py  db.py  main.py  schemas.py  security.py  spotify.py  web_push.py  worker.py
backend/app/routes/: auth.py  me.py  web_push.py
backend/duo_sync_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/sql/: 0001_init.sql  0002_now_playing.sql  0003_realtime.sql  0004_web_push.sql
duo-sync/: ContentView.swift  duo_syncApp.swift
duo-sync-Widget/: DuoSyncWidgetBundle.swift  NowPlayingLiveActivity.swift  NowPlayingWidget.swift  SupabaseFetcher.swift
duo-sync.xcodeproj/: project.pbxproj
duo-sync/Backend/: BackendClient.swift  RealtimeNowPlayingClient.swift  SupabaseConfig.swift
duo-sync/LiveActivity/: LiveActivityManager.swift
duo-sync/Push/: BackgroundRefreshScheduler.swift  PushAppDelegate.swift
duo-sync/Spotify/: KeychainHelper.swift  NowPlayingService.swift  SpotifyAPIClient.swift  SpotifyAuthManager.swift  SpotifyConfig.swift
duo-sync/Views/: HomeView.swift  LoginView.swift
duo-syncTests/: duo_syncTests.swift
duo-syncUITests/: duo_syncUITests.swift  duo_syncUITestsLaunchTests.swift
web/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
(+12 files in other folders)
